Shrinkwrap constraint don't get updated when target mesh gets modified #50677

Closed
opened 2017-02-14 06:23:40 +01:00 by Alexander Maltsev · 6 comments

System Information
Tested on linux and windows.

Blender Version
2.78b 3c04373

Exact steps for others to reproduce the error
shrinkwrap_modifier.blend modify plane in attached file with e.g. sculpt. Cube don't get repositioned with shrinkwrap constraint until switching to editmode and back or attempting to move it. As a workaround, simple scene_update_post script enables live update.
On contrary, shrinkwrap modifier updates instantly.

**System Information** Tested on linux and windows. **Blender Version** 2.78b 3c04373 **Exact steps for others to reproduce the error** [shrinkwrap_modifier.blend](https://archive.blender.org/developer/F485106/shrinkwrap_modifier.blend) modify plane in attached file with e.g. sculpt. Cube don't get repositioned with shrinkwrap constraint until switching to editmode and back or attempting to move it. As a workaround, simple scene_update_post script enables live update. On contrary, shrinkwrap *modifier* updates instantly.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @keltar

Added subscriber: @keltar

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2017-02-16 11:12:28 +01:00

This is update issue… Actually, with new depsgrah (--enable-new-depsgraph option from command line), shrinkwrap constraint also updates in Edit mode e.g.

Not in sculpt mode though, not sure we want to add this? Will let our despgraph master @Sergey decide this I think. ;)

This is update issue… Actually, with new depsgrah (`--enable-new-depsgraph` option from command line), shrinkwrap constraint also updates in Edit mode e.g. Not in sculpt mode though, not sure we want to add this? Will let our despgraph master @Sergey decide this I think. ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Sculpt mode avoids flushes as much as possible in order to keep best performance and less amount of lack when sculpting.

Committed change which ensures scene is bought back to a consistent state when leaving sculpt more (before the scene was not updated when going to object mode from sculpt).

Surely there might be some further tweaks, but those are outside of the bug tracker actually.

Sculpt mode avoids flushes as much as possible in order to keep best performance and less amount of lack when sculpting. Committed change which ensures scene is bought back to a consistent state when leaving sculpt more (before the scene was not updated when going to object mode from sculpt). Surely there might be some further tweaks, but those are outside of the bug tracker actually.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50677
No description provided.